// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SaveBar should render save bar COMPLETED 1`] = `
<div
  className="sc-bwzfXH gWHEGL save-bar"
>
  <div
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={100}
    className="linear sc-bxivhb guboWi"
    data-react-toolbox="progress-bar"
    disabled={undefined}
  >
    <div>
      <span
        className={undefined}
        data-ref="buffer"
        style={
          Object {
            "MsTransform": "scaleX(0)",
            "WebkitTransform": "scaleX(0)",
            "transform": "scaleX(0)",
          }
        }
      />
      <span
        className="value"
        data-ref="value"
        style={
          Object {
            "MsTransform": "scaleX(1)",
            "WebkitTransform": "scaleX(1)",
            "transform": "scaleX(1)",
          }
        }
      />
    </div>
  </div>
  <div
    className="sc-htpNat fHEvbJ"
  >
    SAVED
  </div>
  <div
    className="sc-bdVaJa bgbluT"
  />
</div>
`;

exports[`SaveBar should render save bar FAILED 1`] = `
<div
  className="sc-bwzfXH gWHEGL save-bar"
>
  <div
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={100}
    className="linear sc-bxivhb kOaAkp"
    data-react-toolbox="progress-bar"
    disabled={undefined}
  >
    <div>
      <span
        className={undefined}
        data-ref="buffer"
        style={
          Object {
            "MsTransform": "scaleX(0)",
            "WebkitTransform": "scaleX(0)",
            "transform": "scaleX(0)",
          }
        }
      />
      <span
        className="value"
        data-ref="value"
        style={
          Object {
            "MsTransform": "scaleX(1)",
            "WebkitTransform": "scaleX(1)",
            "transform": "scaleX(1)",
          }
        }
      />
    </div>
  </div>
  <div
    className="sc-htpNat jvZXLN"
  >
    SAVE FAILED
  </div>
  <div
    className="sc-bdVaJa bgbluT"
  />
</div>
`;

exports[`SaveBar should render save bar IN_PROGRESS 1`] = `
<div
  className="sc-bwzfXH gWHEGL save-bar"
>
  <div
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={100}
    className="linear sc-bxivhb fGBlup"
    data-react-toolbox="progress-bar"
    disabled={undefined}
  >
    <div>
      <span
        className={undefined}
        data-ref="buffer"
        style={undefined}
      />
      <span
        className="value"
        data-ref="value"
        style={undefined}
      />
    </div>
  </div>
  <div
    className="sc-htpNat hoqFTd"
  >
    SAVING
  </div>
  <div
    className="sc-bdVaJa bgbluT"
  />
</div>
`;
